Clean up replicatedLog() references
This is a follow-up for the previous patch, cleaning up references to
deprecated methods and simplifying replicated log references.

Change-Id: Id95123119a11e7571f62c45a081fbb018a288f91
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>